--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,14 @@
   border-radius: 4px;
   padding: 5px;
   max-width: 400px;
+  margin: 0 auto;
 }
 
 .todo {
   background: #fff;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
-  padding: 3px 10px;
-  font-size: 14px;
+  padding: 8px 16px;
+  font-size: 16px;
   margin-bottom: 6px;
   border-radius: 3px;
   display: flex;
@@ -27,17 +28,19 @@
   width: 100%;
   box-sizing: border-box;
   border: 0;
+  font-size: 14px;
   border-radius: 4px;
   box-shadow: none;
   padding: 1rem;
-  height: 2.25em;
+  height: 3.5em;
 }
 
 button {
   border: 1px solid #eee;
   border-radius: 2px;
   background: #fff;
+  font-size: 14px;
   color: #666;
-  margin: 0 1px;
+  margin: 0 3px;
   cursor: pointer;
 }
