--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
-.app {
+html {
   background: #209cee;
   padding: 30px;
-  height: 100vh;
+}
+.app {
+  height: 100%;
 }
 
 .todo-list {
@@ -14,7 +16,7 @@
 
 h1 {
   text-align: center;
-  color: white; 
+  color: white;
 }
 
 .todo {
@@ -29,7 +31,7 @@ h1 {
   justify-content: space-between;
 }
 
-.input{
+.input {
   width: 100%;
   box-sizing: border-box;
   border: 0;
